# Saily

./: README.md
Database/: MQTTboatsDB.sql  test.txt  (+4 more)
IOTSender/src/: CMakeLists.txt  Makefile  main.cpp
IOTSender/src/buildsqlite/: Makefile  config.status  lemon  libtool  mkkeywordhash  mksourceid  sqlite3  sqlite3.pc  src-verify
IOTSender/src/buildsqlite/.libs/: libsqlite3.0.dylib
IOTSender/src/buildsqlite/tsrc/: fts5.c  sqlite_cfg.h  vdbe.c
IOTSender/src/core/exceptions/: exceptions.hpp
IOTSender/src/core/interfaces/: observer.hpp
IOTSender/src/core/utils/: commands.hpp  http_client.hpp  json_parser.hpp  network_info.hpp  shared_preferences.hpp
IOTSender/src/features/data/dataends/: remote_data_end.hpp
IOTSender/src/features/data/datasources/: canbus_data_source.hpp  local_data_source.hpp  remote_data_source.hpp
IOTSender/src/features/data/models/: actuator_info_model.hpp  high_power_battery_info_model.hpp  number_trivia_model.hpp
IOTSender/src/features/data/repos/: info_sender_repo_impl.hpp  number_trivia_repo_impl.hpp
IOTSender/src/features/domain/entities/: actuator_info.hpp  boat_credential.hpp  data_info.hpp  high_power_battery_info.hpp  number_trivia.hpp
IOTSender/src/features/domain/repos/: info_sender_repo.hpp  number_trivia_repo.hpp
IOTSender/src/features/domain/usecases/: get_concrete_number_trivia.hpp  get_random_number_trivia.hpp
IOTSender/tests/: CMakeLists.txt  Makefile  main.cpp
IOTSender/tests/core/utils/: commands_test.hpp  network_info_test.hpp  shared_preferences_test.hpp
IOTSender/tests/features/data/dataends/: remote_data_end_test.hpp
IOTSender/tests/features/data/datasources/: local_data_source_test.hpp  remote_data_source_test.hpp
IOTSender/tests/features/data/models/: actuator_info_model_test.hpp  high_power_battery_info_model_test.hpp
IOTSender/tests/features/data/repos/: number_trivia_repo_impl_test.hpp
IOTSender/tests/features/domain/entities/: actuator_info_test.hpp
IOTSender/tests/features/domain/usecases/: get_concrete_number_trivia_test.hpp  get_random_number_trivia_test.hpp  mock_repo.hpp
(+233 files in other folders)
